# strataDB

./: .gitignore  Cargo.toml  deny.toml
.claude/: CLAUDE.md  README.md  settings.json
.claude/agents/: implementer.md  researcher.md  reviewer.md
.claude/commands/: plan.md  ship.md  verify.md
.claude/docs/: architecture.md  conventions.md
.claude/docs/decisions/: 0001-template.md  0002-cpp-over-rust.md  0003-snapshot-isolation-not-serializability.md  0004-toolchain-audit-2026-07.md  0005-rust-over-cpp-reversal.md
.claude/docs/design/: phase-0-transaction-and-format-spec.md  phase-2-encodings-and-groupby-spec.md  phase-2-implementation-plan.md  phase-3-implementation-plan.md  phase-3-query-refinement-spec.md  phase-4-implementation-plan.md  phase-4-vector-index-spec.md  phase-5-mvcc-snapshot-isolation-spec.md
.claude/rules/: concurrency-txn-layer.md  python-bindings.md  vector-index.md
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/benches/: concurrent_commit_bench.rs  group_by_bench.rs  lockfree_vs_hnsw_rs_bench.rs  vector_search_bench.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs
crates/chaos-worker/: Cargo.toml
crates/chaos-worker/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: mvp_checklist_6_crash_recovery.rs
crates/index/: Cargo.toml
crates/index/src/: brute_force.rs  delta_log.rs  distance.rs  graph.rs  hnsw.rs  lib.rs  node.rs  node_table.rs  slot_array.rs
crates/query/: Cargo.toml
crates/query/src/: group_by.rs  lib.rs  predicate.rs
crates/storage/: Cargo.toml
crates/storage/src/: chaos.rs  datafile.rs  encoding.rs  error.rs  lib.rs  manifest.rs  stats.rs
crates/storage/tests/: chaos_checkpoint_actually_aborts.rs
crates/txn/: Cargo.toml
crates/txn/examples/: basic_usage.rs
crates/txn/src/: commit_log.rs  dataset.rs  error.rs  lib.rs  mvp_fixtures.rs  snapshot.rs
crates/txn/tests/: concurrent_snapshot_isolation.rs  mvp_checklist_1_to_5.rs  phase_3_pruning.rs
docs/superpowers/plans/: 2026-07-17-effective-rust-remediation-plan.md  2026-07-18-lockfree-hnsw-rewrite-plan.md  2026-07-19-group-by-phase-a-optimization-plan.md  2026-07-19-hnsw-search-performance-improvements-plan.md  2026-07-19-saturation-during-insert-recall-fix-plan.md  2026-07-21-phase-6-concurrent-write-engine.md  2026-07-22-phase-7-correctness-harness.md
docs/superpowers/specs/: 2026-07-17-effective-rust-remediation-design.md  2026-07-18-hnsw-rs-wrap-vs-replace-decision.md  2026-07-18-lockfree-hnsw-rewrite-design.md  2026-07-19-group-by-phase-a-optimization-design.md  2026-07-19-hnsw-search-performance-improvements-design.md  2026-07-19-saturation-during-insert-design.md  2026-07-21-phase-6-concurrent-write-engine-design.md  2026-07-22-phase-7-correctness-harness-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: manifest_parse.rs
tests/sim/: Cargo.toml
tests/sim/tests/: chaos.rs
