[package]
name = "strata-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arrow.workspace = true
hnsw_rs.workspace = true
parquet = "58"
strata-index = { path = "../crates/index" }
strata-query = { path = "../crates/query" }
strata-storage = { path = "../crates/storage" }
strata-txn = { path = "../crates/txn" }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "group_by_bench"
harness = false

[[bench]]
name = "vector_search_bench"
harness = false

[[bench]]
name = "lockfree_vs_hnsw_rs_bench"
harness = false
