[package]
name = "strata-txn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
arrow.workspace = true
thiserror.workspace = true
strata-storage = { path = "../storage" }
strata-query = { path = "../query" }
strata-index = { path = "../index" }
arc-swap = "1"
im = "15"
